--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Mouth</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/game.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body>
-    <div class="center">
-        <div class="letterDisplay">
-            <a id="firstLetter" class="letter">h</a>
-            <a id="secondLetter" class="letter">2</a>
+<body >
+    <div class="position-absolute top-50 start-50 translate-middle w-75">
+        <div class="letterDisplay gap-3">
+            <h1 id="firstLetter" class="letter text-uppercase display-2 border border-2 rounded p-5  text-center">-</h1>
+            <h1 id="secondLetter" class="letter text-uppercase display-2 border border-2 rounded p-5 text-center">-</h1>
         </div>
-        <div id='playerList' class="letterDisplay">
+        <div class="container">
+
+            <div id='playerList' class="letterDisplay table-responsive">
+                <table class="table table-sm align-middle">
+                    <tbody id="playerTable">
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <input id="guessBox" class="guessBox" placeholder="Guess"/>
-        <button id="generate" >Generate</button>
-        <button id="leave" >Leave</button>
+        <div class="d-grid gap-2 mx-auto col-6">
+            <input id="guessBox" type="text" class="form-control" placeholder="Guess" aria-label="Guess Box" aria-describedby="basic-addon1">
+            <button id="start" class="btn btn-primary" >Start</button>
+            <button id="generate" class="btn btn-primary" >Generate</button>
+            <button id="leave" class="btn btn-danger">Leave</button>
+        </div>
     </div>
 </body>
 </html>
