--- a/public/home.html
+++ b/public/home.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="/css/game.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/game.css">
     <script src="js/home.js"></script>
     <title>Smart Mouth Home Page</title>
 </head>
 <body>
-    <div class="center">
-        <input id="name" placeholder="Name"/> <br />
-        <button id="join">Join</button>
+
+    <div class="position-absolute top-50 start-50 translate-middle w-75">
+        <div class="shadow-lg p-4 rounded-3 d-grid gap-1 mx-auto col-6">
+            <h1 class="text-uppercase display-2 rounded p-5 mb-2 text-center noselect" >Smart Mouth</h1>
+            <div class="d-grid gap-1 mx-auto col-6">
+                <input id="name" class="form-control mb-4 text-center" placeholder="Name" aria-label="Name" aria-describedby="basic-addon1" autocomplete="off"/>
+                <button id="join" class="btn btn-danger mb-5 mx-auto col-9">Join</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
