--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,14 @@
             <h1 id="firstLetter" class="letter text-uppercase display-2 border border-2 rounded p-5  text-center">-</h1>
             <h1 id="secondLetter" class="letter text-uppercase display-2 border border-2 rounded p-5 text-center">-</h1>
         </div>
-        <div class="container">
-
-            <div id='playerList' class="letterDisplay table-responsive">
-                <table class="table table-sm align-middle">
-                    <tbody id="playerTable">
+        <div class="letterDisplay w-25 mx-auto">
+                <table class="table table-bordered table-sm">
+                    <tbody id="playerTable" class="table table-bordered">
                     </tbody>
                 </table>
-            </div>
         </div>
         <div class="d-grid gap-2 mx-auto col-6">
-            <input id="guessBox" type="text" class="form-control" placeholder="Guess" aria-label="Guess Box" aria-describedby="basic-addon1">
+            <input id="guessBox" type="text" class="form-control" placeholder="Guess" aria-label="Guess Box" aria-describedby="basic-addon1" autocomplete="off">
             <button id="start" class="btn btn-primary" >Start</button>
             <button id="generate" class="btn btn-primary" >Generate</button>
             <button id="leave" class="btn btn-danger">Leave</button>
